--- a/template/index.html
+++ b/template/index.html
@@ -41,6 +41,7 @@
                     <li><a id="navRegister" href="register.html" class="hidden"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a id="navLogin" href="login.html" class="hidden"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     <li><a id="navAccount" class="hidden"></a></li>
+                    <li><a id="navUpload" href="upload.html" class="hidden"><span class="glyphicon glyphicon-upload"></span> Up</a></li>
                     <li><a id="navNew" href="new.html" class="hidden"><span class="glyphicon glyphicon-plus"></span> New</a></li>
                     <li><a id="navLogout" href="javascript: return false;" class="hidden"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
