--- a/template/upload.html
+++ b/template/upload.html
@@ -15,7 +15,7 @@
     <h1>目前頭像</h1>
     <img id="img" src="">
     <br>
-    <input class="form-control" id="blockimg" type="file">
+    <input class="form-control" id="blockimg" type="file" accept="image/jpeg,image/jpg,image/gif,image/png">
     <button id="upload">上傳</button>
     <p>限制規格:jpeg, jpg, gif, png</p>
     <p>限制大小:不超過2mb</p>
