--- a/template/index.html
+++ b/template/index.html
@@ -38,29 +38,33 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="navAdmin" class="hidden"><span class="glyphicon glyphicon-wrench"></span> Admin</a></li>
-                    <li><a id="navRegister" href="register.html" class="hidden"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a id="navLogin" href="login.html" class="hidden"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a id="navRegister" href="register.html" class="hidden"><span
+                                class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a id="navLogin" href="login.html" class="hidden"><span
+                                class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     <li><a id="navAccount" class="hidden"></a></li>
-                    <li><a id="navUpload" href="upload.html" class="hidden"><span class="glyphicon glyphicon-upload"></span> Up</a></li>
-                    <li><a id="navNew" href="new.html" class="hidden"><span class="glyphicon glyphicon-plus"></span> New</a></li>
-                    <li><a id="navLogout" href="javascript: return false;" class="hidden"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <li><a id="navUpload" href="upload.html" class="hidden"><span
+                                class="glyphicon glyphicon-upload"></span> Up</a></li>
+                    <li><a id="navNew" href="new.html" class="hidden"><span class="glyphicon glyphicon-plus"></span>
+                            New</a></li>
+                    <li><a id="navLogout" href="javascript: return false;" class="hidden"><span
+                                class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="col-xs-6 col-md-4">
-        <div class="input-group">
-            <input type="text" id="datepicker" class="form-control" placeholder="Search" id="txtSearch"/>
-            <div class="input-group-btn">
-                <button id="dateSearch" class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+    <div class="chat_bg">
+        <div class="col-xs-4 col-md-4 pull-right">
+            <div class="input-group">
+                <input type="text" id="datepicker" class="form-control" placeholder="Search" id="txtSearch" />
+                <div class="input-group-btn">
+                    <button id="dateSearch" class="btn btn-primary" type="submit"><span
+                            class="glyphicon glyphicon-search"></span></button>
+                </div>
             </div>
         </div>
-    </div>
-
-    <br>
-
-    <div class="chat_bg">
+        <br><br>
         <div class="chat_list">
             <ul id="list" class="list-group">
             </ul>
