--- a/template/new.html
+++ b/template/new.html
@@ -22,21 +22,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="navbar_gap">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Message Board</a>
+        <nav class="navbar navbar-inverse">
+                <div class="navbar_gap">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="index.html">Message Board</a>
+                        </div>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a id="navAdmin" class="hidden"><span class="glyphicon glyphicon-wrench"></span> Admin</a></li>
+                            <li><a id="navRegister" href="register.html" class="hidden"><span
+                                        class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                            <li><a id="navLogin" href="login.html" class="hidden"><span
+                                        class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                            <li><a id="navAccount" class="hidden"></a></li>
+                            <li><a id="navUpload" href="upload.html" class="hidden"><span
+                                        class="glyphicon glyphicon-upload"></span> Up</a></li>
+                            <li><a id="navNew" href="new.html" class="hidden"><span class="glyphicon glyphicon-plus"></span>
+                                    New</a></li>
+                            <li><a id="navLogout" href="javascript: return false;" class="hidden"><span
+                                        class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a id="navRegister" href="register.html" class="hidden"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a id="navLogin" href="login.html" class="hidden"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    <li><a id="navAccount" class="hidden"></a></li>
-                    <li><a id="navLogout" href="javascript: return false;" class="hidden"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+            </nav>
 
     <div style="width: 50%; margin: 0px auto;">
         <h1>新增訊息</h1>
