--- a/template/modify.html
+++ b/template/modify.html
@@ -40,7 +40,7 @@
     </nav>
 
     <div style="width: 50%; margin: 0px auto;">
-        <h1>編輯訊息</h1>
+        <h1><strong>編輯訊息</strong></h1>
         <textarea id="title" cols="50" rows="5"></textarea>
         <br>
         <button id="sendModify">送出修改</button>
