--- a/template/new.html
+++ b/template/new.html
@@ -47,7 +47,7 @@
             </nav>
 
     <div style="width: 50%; margin: 0px auto;">
-        <h1>新增訊息</h1>
+        <h1><strong>新增訊息</strong></h1>
         <textarea id="title" cols="50" rows="5"></textarea>
         <br>
         <button id="sendNew">送出新增</button>
