--- a/template/index.html
+++ b/template/index.html
@@ -65,10 +65,16 @@
             </div>
         </div>
         <br><br>
+
         <div class="chat_list">
             <ul id="list" class="list-group">
             </ul>
         </div>
+    </div>
+
+    <div class="col-xs-4 col-md-4 pull-right" id="page">
+        <a id="1" style="color: black;">1</a>
+        <a href="javascript: void(0)" id="2">2</a>
     </div>
 </body>
 
