--- a/template/upload.html
+++ b/template/upload.html
@@ -41,12 +41,13 @@
 
     <div class="row">
         <div class="col-lg-offset-5">
-            <h1>目前頭像</h1>
+            <h1><strong>目前頭像</strong></h1>
             <img id="img" src="">
             <br><br>
-            <input type="file" class="form-control-file" id="exampleFormControlFile1">
+            <input type="file" class="form-control-file" id="blockimg" style="float: left;">
+            <button id="upload">上傳</button>
             <p>限制規格:jpeg, jpg, gif, png</p>
-            <p>限制大小:不超過2mb</p>      
+            <p>限制大小:不超過2mb</p>
         </div>
     </div>
 </body>
